fix checkboxes visibility

--- a/chameleon-wikifab.less
+++ b/chameleon-wikifab.less
@@ -635,8 +635,7 @@ a:hover {
 
 .WfFormCheckbox input{
     margin-right: 12px;
-    vertical-align: 5px;
-    visibility: hidden;
+    vertical-align: -5px;
 }
 
 .WfFormCheckbox input[type="checkbox"]:focus {
